--- a/public/styles/inuit/inuit.css/objects/_options.scss
+++ b/public/styles/inuit/inuit.css/objects/_options.scss
@@ -1,3 +1,5 @@
+@if $use-options == true{
+
 /*------------------------------------*\
     $OPTIONS
 \*------------------------------------*/
@@ -5,16 +7,16 @@
  * Link-group nav, used for displaying related options. Extends `.nav--block`
  * but could also extend `.nav--fit`. Extend with colours and ‘current states’
  * in your theme stylesheet.
- * 
+ *
   <ul class="nav  options">
-      <li><a></a></li><!-- 
-   --><li><a></a></li><!-- 
-   --><li><a></a></li><!-- 
-   --><li><a></a></li> 
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
    </ul>
- * 
+ *
  * Demo: jsfiddle.net/inuitcss/vwfaf
- * 
+ *
  */
 .options{
     @extend .nav--block;
@@ -22,18 +24,22 @@
     > li{
 
         > a{
-            border:0 solid #ccc; /* Extend in your theme stylesheet */
+            border:0 solid $base-ui-color;
             border-width:1px;
             border-left-width:0;
         }
 
         &:first-child > a{
             border-left-width:1px;
-            border-radius:$brand-round 0 0 $brand-round;
+            border-top-left-radius:$brand-round;
+            border-bottom-left-radius:$brand-round;
         }
 
         &:last-child > a{
-            border-radius:0 $brand-round $brand-round 0;
+            border-top-right-radius:$brand-round;
+            border-bottom-right-radius:$brand-round;
         }
     }
 }
+
+}//endif
